clusters/apps/authorization-server/overlays/cloud/image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-server
  namespace: authorization
spec:
  template:
    spec:
      containers:
        - name: authorization-server
          image: ghcr.io/dmgiangi/calcifer-authorization-server@sha256:c8717b276e6c5f69f8c1977f8e1097081c64b32a90d5314f7806c69cce3ba608
