clusters/apps/authorization-server/overlays/cloud/probe-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-server
  namespace: authorization
spec:
  template:
    spec:
      containers:
        - name: authorization-server
          startupProbe:
            timeoutSeconds: 5
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            timeoutSeconds: 5
            failureThreshold: 6
            periodSeconds: 10
          readinessProbe:
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
