clusters/apps/authorization-server/overlays/cloud/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authorization-server
  namespace: authorization
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`auth.calcifer.tech`)
      kind: Rule
      middlewares:
        - name: authorization-server-rate-limit
        - name: authorization-server-security-headers
      services:
        - name: authorization-server
          port: 8080
  tls:
    secretName: authorization-server-tls
